# neural_bipartite_matching

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/neural_bipartite_matching/: __init__.py  _core.py  jax_backend.py  torch_backend.py
tests/: test_matching.py
