[project]
name = "neural-bipartite-matching"
version = "0.1.0"
description = "Neural (distributed, gradient-descent-style) bipartite matching algorithm of Dasgupta et al. (PNAS 2024), with optional PyTorch and JAX backends."
readme = "README.md"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax = ["jax>=0.4", "jaxlib>=0.4"]
test = [
    "pytest>=7",
    "scipy>=1.10",
    "torch>=2.0",
    "jax>=0.4",
    "jaxlib>=0.4",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
